--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse-2112050220\testng-customsuite.xml</span>
+                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse-86060970\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarPerfilTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Perfil&quot;, &quot;Visualitzar Perfil&quot;)">runScenario("Visualitzar Perfil", "Visualitzar Perfil")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="DeleteProductCarritoTest" class="method navigator-link" hash-for-method="runScenario(&quot;Delete Carrito&quot;, &quot;DeleteProductCarrito&quot;)">runScenario("Delete Carrito", "DeleteProductCarrito")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,15 +121,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">VisualitzarPerfilTest</span>
+              <span class="class-name">DeleteProductCarritoTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Visualitzar Perfil&quot;, &quot;Visualitzar Perfil&quot;)">
-                  </a> <!-- runScenario("Visualitzar Perfil", "Visualitzar Perfil") -->
+                  <a name="runScenario(&quot;Delete Carrito&quot;, &quot;DeleteProductCarrito&quot;)">
+                  </a> <!-- runScenario("Delete Carrito", "DeleteProductCarrito") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Visualitzar Perfil","Visualitzar Perfil")</span>
+                  <span class="parameters">("Delete Carrito","DeleteProductCarrito")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -139,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse-2112050220\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse-86060970\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;VisualitzarPerfilTest&quot;/&gt;
+      &lt;class name=&quot;DeleteProductCarritoTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -199,8 +199,8 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'VisualitzarPerfilTest')
-data.setCell(0, 3, 6061);
+data.setCell(0, 2, 'DeleteProductCarritoTest')
+data.setCell(0, 3, 6465);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -231,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">VisualitzarPerfilTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">DeleteProductCarritoTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@56380231)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@79d9214d)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Visualitzar Perfil", "Visualitzar Perfil")</span>
-                <span class="method-start">182 ms</span>
+                <span class="method-name">runScenario("Delete Carrito", "DeleteProductCarrito")</span>
+                <span class="method-start">361 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">6246 ms</span>
+                <span class="method-start">6833 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
