--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse-86060970\testng-customsuite.xml</span>
+                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse--1519166757\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="DeleteProductCarritoTest" class="method navigator-link" hash-for-method="runScenario(&quot;Delete Carrito&quot;, &quot;DeleteProductCarrito&quot;)">runScenario("Delete Carrito", "DeleteProductCarrito")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SearchProductTest" class="method navigator-link" hash-for-method="runScenario(&quot;Valid product&quot;, &quot;SearchProduct&quot;)">runScenario("Valid product", "SearchProduct")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="SearchProductTest" class="method navigator-link" hash-for-method="runScenario(&quot;Invalid product&quot;, &quot;SearchProduct&quot;)">runScenario("Invalid product", "SearchProduct")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,15 +126,25 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">DeleteProductCarritoTest</span>
+              <span class="class-name">SearchProductTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Delete Carrito&quot;, &quot;DeleteProductCarrito&quot;)">
-                  </a> <!-- runScenario("Delete Carrito", "DeleteProductCarrito") -->
+                  <a name="runScenario(&quot;Valid product&quot;, &quot;SearchProduct&quot;)">
+                  </a> <!-- runScenario("Valid product", "SearchProduct") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Delete Carrito","DeleteProductCarrito")</span>
+                  <span class="parameters">("Valid product","SearchProduct")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Invalid product&quot;, &quot;SearchProduct&quot;)">
+                  </a> <!-- runScenario("Invalid product", "SearchProduct") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Invalid product","SearchProduct")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -139,7 +154,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse-86060970\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse--1519166757\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +163,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;DeleteProductCarritoTest&quot;/&gt;
+      &lt;class name=&quot;SearchProductTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,16 +211,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'DeleteProductCarritoTest')
-data.setCell(0, 3, 6465);
+data.setCell(0, 2, 'SearchProductTest')
+data.setCell(0, 3, 5687);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'runScenario')
+data.setCell(1, 2, 'SearchProductTest')
+data.setCell(1, 3, 4581);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,18 +250,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">DeleteProductCarritoTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">SearchProductTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@79d9214d)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@66f0548d)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Delete Carrito", "DeleteProductCarrito")</span>
-                <span class="method-start">361 ms</span>
+                <span class="method-name">runScenario("Valid product", "SearchProduct")</span>
+                <span class="method-start">278 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Invalid product", "SearchProduct")</span>
+                <span class="method-start">5970 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">6833 ms</span>
+                <span class="method-start">10560 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
