--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse--1279766930\testng-customsuite.xml</span>
+                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse--722872760\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="DetallProducteTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Detall dels productes&quot;, &quot;DetallProducte&quot;)">runScenario("Visualitzar Detall dels productes", "DetallProducte")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCarritoTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar producte carrito&quot;, &quot;VisualitzarCarrito&quot;)">runScenario("Visualitzar producte carrito", "VisualitzarCarrito")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="DetallProducteTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar Detall dels productes&quot;, &quot;DetallProducte&quot;)">runScenario("Visualitzar Detall dels productes", "DetallProducte")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCarritoTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar carrito buit&quot;, &quot;VisualitzarCarrito&quot;)">runScenario("Visualitzar carrito buit", "VisualitzarCarrito")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,25 +126,25 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">DetallProducteTest</span>
+              <span class="class-name">VisualitzarCarritoTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Visualitzar Detall dels productes&quot;, &quot;DetallProducte&quot;)">
-                  </a> <!-- runScenario("Visualitzar Detall dels productes", "DetallProducte") -->
+                  <a name="runScenario(&quot;Visualitzar producte carrito&quot;, &quot;VisualitzarCarrito&quot;)">
+                  </a> <!-- runScenario("Visualitzar producte carrito", "VisualitzarCarrito") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Visualitzar Detall dels productes","DetallProducte")</span>
+                  <span class="parameters">("Visualitzar producte carrito","VisualitzarCarrito")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Visualitzar Detall dels productes&quot;, &quot;DetallProducte&quot;)">
-                  </a> <!-- runScenario("Visualitzar Detall dels productes", "DetallProducte") -->
+                  <a name="runScenario(&quot;Visualitzar carrito buit&quot;, &quot;VisualitzarCarrito&quot;)">
+                  </a> <!-- runScenario("Visualitzar carrito buit", "VisualitzarCarrito") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Visualitzar Detall dels productes","DetallProducte")</span>
+                  <span class="parameters">("Visualitzar carrito buit","VisualitzarCarrito")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -154,7 +154,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse--1279766930\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse--722872760\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -163,7 +163,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;DetallProducteTest&quot;/&gt;
+      &lt;class name=&quot;VisualitzarCarritoTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -214,17 +214,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'DetallProducteTest')
-data.setCell(0, 3, 6111);
+data.setCell(0, 2, 'VisualitzarCarritoTest')
+data.setCell(0, 3, 5683);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'DetallProducteTest')
-data.setCell(1, 3, 5399);
+data.setCell(1, 2, 'VisualitzarCarritoTest')
+data.setCell(1, 3, 4223);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,22 +250,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">DetallProducteTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">VisualitzarCarritoTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@7cea0110)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@4f668f29)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Visualitzar Detall dels productes", "DetallProducte")</span>
-                <span class="method-start">269 ms</span>
+                <span class="method-name">runScenario("Visualitzar producte carrito", "VisualitzarCarrito")</span>
+                <span class="method-start">275 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runScenario("Visualitzar Detall dels productes", "DetallProducte")</span>
-                <span class="method-start">6383 ms</span>
+                <span class="method-name">runScenario("Visualitzar carrito buit", "VisualitzarCarrito")</span>
+                <span class="method-start">5961 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">11788 ms</span>
+                <span class="method-start">10188 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
